--- a/web4test/src/main/webapp/edit/Edit.html
+++ b/web4test/src/main/webapp/edit/Edit.html
@@ -35,6 +35,7 @@
 				data-tooltip-direction="b"> <span class="icon i-new-window"></span>
 			</a>
 		</div>
+		
 		<!-- 추가 1번  -->
 		<div class="sidebar">
 
@@ -270,8 +271,8 @@
 							</div>
 						</div>
 					</div>
-					
-					
+
+
 					<!-- text -->
 					<div class="text-list">
 						<div class="toolbar-option toolbar-radio"
@@ -305,8 +306,7 @@
 							data-option-type="text-color">
 							<h4 class="toolbar-option-label">Text Color</h4>
 							<div class="toolbar-color-trigger">
-								<div class="toolbar-color-trigger-inner"
-									style="background-color: rgb(0, 0, 0);"></div>
+								<input class="text-colorinput" type="color">
 								<div class="toolbar-color-reset icon i-undo"
 									data-tooltip="Use default color" data-tooltip-delay="500"></div>
 							</div>
@@ -314,8 +314,8 @@
 						<div class="toolbar-option toolbar-color"
 							data-option-type="background-color">
 							<h4 class="toolbar-option-label">Background Color</h4>
-							<div class="toolbar-color-trigger transparent" >
-								<input class ="colorinput" type ="color">
+							<div class="toolbar-color-trigger transparent">
+								<input class="back-colorinput" type="color">
 								<div class="toolbar-color-reset icon i-undo"
 									data-tooltip="Use default color" data-tooltip-delay="500"></div>
 							</div>
@@ -368,8 +368,8 @@
 										data-option-type="border-color">
 										<h4 class="toolbar-option-label">Color</h4>
 										<div class="toolbar-color-trigger">
-											<div class="toolbar-color-trigger-inner"
-												style="background-color: rgb(0, 0, 0);"></div>
+
+											<input class="text-border-colorinput" type="color">
 											<div class="toolbar-color-reset icon i-undo"
 												data-tooltip="Use default color" data-tooltip-delay="500"></div>
 										</div>
