--- a/web4test/src/main/webapp/test/index09.html
+++ b/web4test/src/main/webapp/test/index09.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><!-- 멀티 드래그 셀렉트 구현완성 -->
+<head>
     <meta charset="utf-8">
 	<title>web04test</title>
 	<!--<script src="http://code.jquery.com/jquery-1.7.js" type="text/javascript"></script>-->
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<!--<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />-->
 	<!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
-
 	<!-- drag & drop plugin -->
 	<script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
 	<script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
@@ -17,7 +16,7 @@
 
 
 	<link rel="stylesheet" href="css/test03.css">
-	<script src="js/test08noCmt.js"></script>
+	<script src="js/test09.js"></script>
 </head>
 <body>
   <div class='page-wrapper'>
