--- a/web4test/src/main/webapp/edit/Edit.html
+++ b/web4test/src/main/webapp/edit/Edit.html
@@ -297,8 +297,9 @@
 							data-option-type="text-size">
 							<h4 class="toolbar-option-label">Text Scale</h4>
 							<div class="stepper">
-								<input type="text" class="stepper-number">
-							</div>
+                            <input class="font size-box" type=number value=20>
+                            <input class="font size-scroll" type=range  min="0" max="100" step="1">							
+                            </div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
 							data-option-type="divider"></div>
@@ -324,16 +325,16 @@
 							data-option-type="opacity">
 							<h4 class="toolbar-option-label">Opacity</h4>
 							<div class="range">
-								<div class="range-progress" style="width: 100%;"></div>
-								<div class="range-numeric">1.00</div>
+							<input class="opacity size-box" type=number value=1.00>
+                            <input class="opacity size-scroll" type=range  min="0" max="100" step="1">     
 							</div>
 						</div>
 						<div id="padding" class="toolbar-option toolbar-stepper"
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-								<input type="text" class="stepper-number">
-							</div>
+                            <input class="padding size-box" type=number>
+                            <input class="padding size-scroll" type=range  min="0" max="100" step="1">     							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
 							data-option-type="divider"></div>
