--- a/web4test/src/main/webapp/proto/Edit.html
+++ b/web4test/src/main/webapp/proto/Edit.html
@@ -17,7 +17,7 @@
 
 <script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
 <script src="js/text.js"></script> <!--이혜인 text 코드  -->
-<script src="js/test09.js.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/test09.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
 
 </head>
 <body>
