--- a/web4test/src/main/webapp/proto/Edit.html
+++ b/web4test/src/main/webapp/proto/Edit.html
@@ -3,43 +3,41 @@
 <head>
 <meta charset="utf-8">
 <title>presentation</title>
-<script src="http://code.jquery.com/jquery-1.7.js"
-	type="text/javascript"></script>
-<link rel="stylesheet"
-	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<!-- 우인규: 기본 바탕 css -->
+<link rel="stylesheet"	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/Edit.css">
+<!-- 정준호:이미지 업로드css -->
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/bootstrap-theme.css">
 	
+<!-- 우인규 : 기본 바탕js -->
+<script src="http://code.jquery.com/jquery-1.7.js"type="text/javascript"></script>
+
+<!-- 고유식:드래그 관련 js -->
+<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
 
-<link rel="stylesheet" href="css/Edit.css">
-
-<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="css/bootstrap.css">
+<!-- 정준호:이미지 업로드js -->
 <script src="js/bootstrap.js"></script>
-<!-- Optional theme -->
- <link rel="stylesheet" href="css/bootstrap-theme.css">
-
 <script type="text/javascript" src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
 <script type="text/javascript" src="js/jquery-fileupload/jquery.iframe-transport.js"></script>
 <script type="text/javascript" src="js/jquery-fileupload/jquery.fileupload.js"></script>
 <script type="text/javascript" src="js/myuploadfunction.js"></script>
 
-
-
+<!-- 기능별 javascript -->
 <script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
 <script src="js/text.js"></script> <!--이혜인 text 코드  -->
 <script src="js/test09.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
-<script src="js/myuploadfunction.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
+<script src="js/myuploadfunction.js"></script> <!-- 정준호:이미지 업로드js -->
 
-<style type="text/css">
+<!-- <style type="text/css">
 .pnt {
   cursor: pointer;
 }
-</style>
+</style> -->
 </head>
 <body>
 	<div class='page-wrapper'>
