--- a/web4test/src/main/webapp/proto/Edit.html
+++ b/web4test/src/main/webapp/proto/Edit.html
@@ -12,14 +12,12 @@
 	
 <!-- 우인규 : 기본 바탕js -->
 <script src="http://code.jquery.com/jquery-1.7.js"type="text/javascript"></script>
-
 <!-- 고유식:드래그 관련 js -->
 <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
 <script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
-
 <!-- 정준호:이미지 업로드js -->
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/jquery-fileupload/vendor/jquery.ui.widget.js"></script>
@@ -27,17 +25,17 @@
 <script type="text/javascript" src="js/jquery-fileupload/jquery.fileupload.js"></script>
 <script type="text/javascript" src="js/myuploadfunction.js"></script>
 
-<!-- 기능별 javascript -->
+<!-- 기능ㅂ -->
 <script src="js/Edit.js"></script> <!-- 우인규 코드 html 기본 코드 -->
 <script src="js/text.js"></script> <!--이혜인 text 코드  -->
 <script src="js/test09.js"></script> <!-- 고유식 코드 shape, 기본 코드-->
 <script src="js/myuploadfunction.js"></script> <!-- 정준호:이미지 업로드js -->
 
-<!-- <style type="text/css">
+<style type="text/css">
 .pnt {
   cursor: pointer;
 }
-</style> -->
+</style>
 </head>
 <body>
 	<div class='page-wrapper'>
@@ -498,7 +496,7 @@
 							data-option-type="padding">
 							<h4 class="toolbar-option-label">Padding</h4>
 							<div class="stepper">
-                            <input class="padding size-box" type=number>
+                            <input class="padding size-box" type="number" value="1">
                             <input class="padding size-scroll" type=range  min="0" max="100" step="1">     							</div>
 						</div>
 						<div class="toolbar-option toolbar-divider"
